@@ -2017,7 +2017,10 @@ static NSDictionary* instructions(int station_id, Vector coords, float speed, fl
 		// TODO: We're potentially cancelling docking at another station, so
 		//       ensure we clear the timer to allow NPC traffic.  If we
 		//       don't, normal traffic will resume once the timer runs out.
-		[self sendExpandedMessage:DESC(@"station-docking-clearance-not-required") toShip:other];
+		
+		// No clearance is needed, but don't send friendly messages to hostile ships!
+		if (!(([other isPlayer] && [other hasHostileTarget]) || (self == [UNIVERSE station] && [other bounty] > 50)))
+			[self sendExpandedMessage:DESC(@"station-docking-clearance-not-required") toShip:other];
 		if ([other isPlayer])
 			[player setDockingClearanceStatus:DOCKING_CLEARANCE_STATUS_NOT_REQUIRED];
 		[shipAI reactToMessage:@"DOCKING_REQUESTED"];	// react to the request	
@@ -2070,6 +2073,14 @@ static NSDictionary* instructions(int station_id, Vector coords, float speed, fl
 		if ([other isPlayer])
 			[player setDockingClearanceStatus:DOCKING_CLEARANCE_STATUS_NONE];
 		result = @"DOCKING_CLEARANCE_DENIED_SHIP_FUGITIVE";
+	}
+	
+	if (result == nil && [other hasHostileTarget]) // do not grant docking clearance to hostile ships.
+	{
+		[self sendExpandedMessage:DESC(@"station-docking-clearance-denied") toShip:other];
+		if ([other isPlayer])
+			[player setDockingClearanceStatus:DOCKING_CLEARANCE_STATUS_NONE];
+		result = @"DOCKING_CLEARANCE_DENIED_SHIP_HOSTILE";
 	}
 
 	// Put ship in queue if we've got incoming or outgoing traffic
