@@ -362,8 +362,8 @@ typedef enum
 typedef enum
 {
 	DOCKING_CLEARANCE_STATUS_NONE,
-	DOCKING_CLEARANCE_STATUS_REQUESTED,
 	DOCKING_CLEARANCE_STATUS_NOT_REQUIRED,
+	DOCKING_CLEARANCE_STATUS_REQUESTED,
 	DOCKING_CLEARANCE_STATUS_GRANTED,
 	DOCKING_CLEARANCE_STATUS_TIMING_OUT,
 } OODockingClearanceStatus;
